# stlio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: msys2-clang.yml  msys2.yml  ubuntu18.yml  ubuntu20.yml  vs16-ci.yml  vs16-ninja-ci.yml  vs17-ci.yml  vs17-clang-ci.yml
cmake/: stlio-config.cmake.in
include/: stlio.h
src/: CMakeLists.txt  stlio.cpp
tests/: CMakeLists.txt
tests/data/stl/binary/: 20mmbox.stl
tests/src/: StlInMock.h  StlOutMock.h  asserts.cpp  asserts.h  geometry.cpp  geometry.h  test_ReadStl.cpp  test_WriteStl.cpp  utils.cpp  utils.h
